<resources>
    <string name="app_name">Be Fast</string>
    <string name="title_activity_usuario_logado">UsuarioLogado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Agenda</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_sair">Sair</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Cadastre</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="opcoes_registrar">.......ou continue com.......</string>
    <string name="opcao_entrar">Entrar</string>
    <string name="opcao_registrar">Registrar</string>
    <string name="toggle_show">MOSTRAR</string>
    <string name="toggle_hide">ESCONDER</string>

    <!--"Dados do Usuário" -->
    <string name="reg_foto">Foto de perfil</string>
    <string name="reg_buscarFoto">Selecionar Imagem</string>
    <string name="reg_nome">Nome</string>
    <string name="reg_email">Email</string>
    <string name="reg_senha">Senha</string>
    <string name="reg_numCelular">Número para contato</string>
    <string name="reg_dataNascimento">Data de Nascimento</string>
    <string-array name="sexo_usuario">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="hora_spinner">
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>


    </string-array>
    <string name="reg_cep">CEP</string>
    <string name="reg_esqueciCep">Esqueci o CEP</string>
    <string name="reg_logradouro">Logradouro (Rua)</string>
    <string name="reg_numCasa">Numero da Residencia</string>
    <string name="reg_complemento">Complemento(Casa, AP, ...)</string>
    <string name="reg_bairro">Bairro</string>
    <string name="reg_localidade">Localidade (Cidade)</string>
    <string name="reg_uf">UF (Estado)</string>
    <string name="reg_finalizarCadastro">Finalizar Cadastro</string>
    <string name="perfil_editar">Editar Perfil</string>
    <string name="servicos_null">Nenhum serviço cadastrado</string>
    <string name="reg_servicos">Adicionar um Serviço</string>


    <string name="senha_pequena">Senha precisa ter ao menos 6 digítos</string>
    <string name="badly_email">Email Inválido</string>
    <string name="conexao_perdida">Sem conexão com a Internet</string>
    <string name="salvar_ok">Cadastro realizado com sucesso!</string>
    <string name="dados_invalidos">Email ou senhas inválidos!</string>
    <string name="sessao_iniciada">Sessão Iniciada!</string>
    <string name="registro_cadastrando">Cadastrando...!</string>
    <string name="deu_merda">Deu merda...!</string>



    <string name="meu_local">Eu estou aqui!</string>
</resources>