<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/botao_home"
            android:title="@string/menu_home" />
        <item
            android:id="@id/nav_map"
            android:icon="@drawable/placeholder"
            android:title="Mapa" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/perfil_de_usuario"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/agenda"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/servicos_logado"
            android:icon="@drawable/servico_de_reparacao"
            android:title="@string/menu_servicos" />

        <item
            android:id="@+id/nav_logout"
            android:icon="?attr/actionModeCloseDrawable"
            android:title="@string/menu_sair"/>
    </group>



</menu>