<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroCompleto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/regCompFotoPerfil"
                android:layout_width="122dp"
                android:layout_height="110dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/add_photo"
                tools:srcCompat="@drawable/add_photo" />

            <Button
                android:id="@+id/regCompBuscarImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="#790C5A"
                android:text="Selecionar Imagem"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/regCompNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_email"
                android:inputType="textWebEmailAddress|textPersonName" />

            <EditText
                android:id="@+id/regCompSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/reg_senha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/regCompDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_dataNascimento"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_numCelular"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/regCompSexo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:dropDownWidth="wrap_content"
                android:isScrollContainer="false"
                android:keepScreenOn="false"
                android:paddingTop="5dp" />

            <EditText
                android:id="@+id/regCompCEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_cep"
                android:inputType="number"
                android:maxLength="8" />

            <Button
                android:id="@+id/buttonEsqueciCep"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="#790C5A"
                android:text="@string/reg_esqueciCep"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/regCompLogradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_logradouro"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompNumeroCasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_numCasa"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_complemento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_bairro"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_localidade"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regCompUf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/reg_uf"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonFinalizarCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="#790C5A"
                android:text="@string/reg_finalizarCadastro"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>